# kyzu

./: Cargo.toml  format.bat  info.txt  readme.md  rustfmt.toml  todo.txt
kyzu-bake/: Cargo.toml
kyzu-bake/src/: bake.rs  heightmap.rs  icosahedron.rs  main.rs  progress.rs
kyzu-core/: Cargo.toml
kyzu-core/src/: lib.rs  world.rs
kyzu-game/: Cargo.toml  kyzu_codebase_snapshot.txt  snapshot_codebase.ps1
kyzu-game/assets/: icosahedron.bake
kyzu-game/src/: app.rs  lib.rs  loading.rs  loading_screen.rs  main.rs  terrain.wgsl
kyzu-game/src/bake/: geometry.rs  mod.rs  pipeline.rs  registry.rs  subdivider.rs  tiff_reader.rs
kyzu-game/src/core/: config.rs  error.rs  log.rs  math.rs  mod.rs  time.rs
kyzu-game/src/input/: mod.rs  state.rs
kyzu-game/src/render/: depth.rs  geometry.rs  kernel.rs  mod.rs  module.rs  shared.rs
kyzu-game/src/render/camera/: free.rs  mod.rs  orbital.rs  transition.rs
kyzu-game/src/render/modules/: body_renderer.rs  mod.rs  solid.rs
kyzu-game/src/render/shaders/: body.wgsl  solid.wgsl
kyzu-game/src/renderer/: depth.rs  gui.rs  kernel.rs  module.rs
kyzu-game/src/renderer/modules/: camera.rs  mod.rs  sphere.rs  terrain_mesh.rs
kyzu-game/src/shaders/: terrain_mesh.wgsl
kyzu-game/src/ui/: mod.rs
kyzu-game/src/world/: body.rs  manifest_loader.rs  mod.rs  registry.rs
kyzu-native/: Cargo.toml  kyzu.json  todo.txt
kyzu-native/src/: app.rs  config.rs  kzt.rs  main.rs  preprocess.rs  tiff_reader.rs
kyzu-native/src/camera/: fixed.rs  mod.rs  spherical.rs  uniform.rs
kyzu-native/src/earth/: coords.rs  heightmap.rs  mod.rs
kyzu-native/src/input/: camera_control.rs  mod.rs  state.rs
kyzu-native/src/renderer/: axes.rs  core.rs  cube.rs  debug.rs  depth.rs  grid.rs  gui.rs  kernel.rs  mod.rs  module.rs  shared.rs  sphere.rs
kyzu-native/src/renderer/modules/: axes.rs  camera.rs  cube (old).rs  debug.rs  earth_terrain.rs  grid.rs  mod.rs  sphere.rs  terrain.rs
kyzu-native/src/shaders/: axes.wgsl  cube.wgsl  debug.wgsl  earth_terrain.wgsl  grid.wgsl  sphere.wgsl  terrain.wgsl
kyzu-web/: index.html  package-lock.json  package.json  vite.config.ts
kyzu-web/src/: main.ts
kyzu-web/src/shaders/: basic.wgsl
solar-native/: Cargo.toml
solar-native/src/: main.rs
solar-native/src/renderer/: shared.rs
solar-native/src/renderer/modules/: camera.rs
solar-native/src/shaders/: sphere.wgsl
