[package]
name    = "kyzu-game"
version = "0.1.0"
edition = "2021"

[dependencies]
winit    = "0.30"
wgpu     = "27.0"
glam     = { version = "0.29", features = ["bytemuck", "std"] }
bytemuck = { version = "1.20", features = ["derive"] }
pollster = "0.4"
log      = "0.4"
env_logger = "0.11"
egui       = "0.33.3"
egui-wgpu  = "0.33.3"
egui-winit = "0.33.3"
image      = "0.25"
anyhow     = "1"
memmap2 = "0.9"
kyzu-core = { path = "../kyzu-core" }

[[bin]]
name = "kyzu-game"
path = "src/main.rs"
