[package]
name = "kyzu"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.32"
bytemuck = { version = "1.25", features = ["derive"] }
pollster = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
thiserror = "2.0"
wgpu = "=27.0.1"
winit = "0.30"
egui = { version = "0.33", default-features = false, features = ["default_fonts"] }
egui-winit = { version = "0.33", default-features = false, features = ["clipboard"] }
egui-wgpu = { version = "0.33", default-features = false }
anyhow = "1.0.102"
flate2 = "1"
