[package]
name = "kyzu-native"
version = "0.1.0"
edition = "2021"
authors = ["jcrutchy"]
description = "kyzu native application"

[dependencies]
# The windowing engine - Version 0.30+ is required for the ApplicationHandler trait
winit = "0.30"

# The graphics API
wgpu = "23.0"

# Math library - We enable 'bytemuck' to allow sending DVec3/Vec3 to the GPU
glam = { version = "0.29", features = ["bytemuck", "std"] }

# Essential for memory alignment and safe casting to shaders
bytemuck = { version = "1.20", features = ["derive"] }

# A tiny zero-dependency crate to run async wgpu setup synchronously (The Delphi way)
pollster = "0.4"

# Logger for debugging (wgpu uses this to tell you why your shaders failed)
env_logger = "0.11"
log = "0.4"
