[package]
name    = "kyzu-native"
version = "0.1.0"
edition = "2021"
authors = ["jcrutchy"]
description = "Kyzu native application"

[dependencies]
# Windowing and OS event loop
winit = "0.30"

# GPU API (Vulkan/Metal/DX12 abstraction)
wgpu = "27.0"

# Math — bytemuck feature allows Vec3/Mat4 to be sent directly to the GPU
glam = { version = "0.29", features = ["bytemuck", "std"] }

# Zero-overhead casting between plain-data types (required for GPU buffer uploads)
bytemuck = { version = "1.20", features = ["derive"] }

# Minimal async executor — runs wgpu async init synchronously (the Delphi way)
pollster = "0.4"

# wgpu's own logging (errors, validation messages) — initialised in main()
log        = "0.4"
env_logger = "0.11"

egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
